feat: adding permission to gradlew

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,7 @@ jobs:
             ~/.gradle/caches
             ~/.gradle/wrapper
 
+      - name : adding permission
+        run : chmod +x ./gradlew
+
       - run: ./gradlew test
